# cppturko

./: CMakeLists.txt  README.md  clang-format
bash/: build.sh  format.sh  run.sh
cmake/: CompilerWarnings.cmake
gperf/input/: c.gperf  g.gperf  i.gperf  o.gperf  s.gperf  u.gperf
gperf/output/: c.hpp  g.hpp  i.hpp  o.hpp  s.hpp  u.hpp
src/: context.hpp  hashmaps.cpp  hashmaps.hpp  lib.hpp  main.cpp  utility.hpp
table/: c  g  i  o  s  u
